Introduce HTTP support.

--- a/dhcpd-lbr0-pxe.conf
+++ b/dhcpd-lbr0-pxe.conf
@@ -24,6 +24,7 @@ dhcp-match=set:efi-x86_64,option:client-arch,7
 #
 # dhcp-boot=[tag:<tag>,]<filename>,[<servername>[,<server address>|<tftp_servername>]]
 #
-dhcp-boot=bios/pxelinux.0,,192.168.0.123
+#dhcp-boot=bios/pxelinux.0,,192.168.0.123
+dhcp-boot=bios/lpxelinux.0,,192.168.0.123
 #dhcp-boot=tag:efi-ia32,efi32/syslinux.efi,,192.168.0.123
 dhcp-boot=tag:efi-x86_64,efi64/syslinux.efi,,192.168.0.123
