Enable UEFI 32-bit architecture detection.

--- a/dhcpd-lbr0-pxe.conf
+++ b/dhcpd-lbr0-pxe.conf
@@ -11,7 +11,7 @@ dhcp-no-override
 # Syntax:
 # dhcp-match=set:<tag>,<option number>|option:<option name>|vi-encap:<enterprise>[,<value>]
 #
-#dhcp-match=set:efi-ia32,option:client-arch,6
+dhcp-match=set:efi-ia32,option:client-arch,6
 dhcp-match=set:efi-x86_64,option:client-arch,7
 #dhcp-match=set:efi-x86_64,option:client-arch,9
 
@@ -27,5 +27,5 @@ dhcp-match=set:efi-x86_64,option:client-arch,7
 dhcp-boot=bios/lpxelinux.0,,192.168.0.123
 
 # UEFI mode configuration.
-#dhcp-boot=tag:efi-ia32,efi32/syslinux.efi,,192.168.0.123
+dhcp-boot=tag:efi-ia32,efi32/syslinux.efi,,192.168.0.123
 dhcp-boot=tag:efi-x86_64,efi64/syslinux.efi,,192.168.0.123
