--- a/dhcpd-lbr0-pxe.conf
+++ b/dhcpd-lbr0-pxe.conf
@@ -1,5 +1,7 @@
 # File location /etc/dhcpd/
+# Run `dnsmasq --help dhcp` to see available DHCP options.
 # Documentation at https://dnsmasq.org/docs/dnsmasq-man.html
+# List of standard DHCP options: https://www.iana.org/assignments/bootp-dhcp-parameters/bootp-dhcp-parameters.xml#options
 # Discussion at https://community.synology.com/enu/forum/2/post/124897
 # Useful articles:
 #   https://c-nergy.be/blog/?p=13771
