--- a/dhcpd-lbr0-pxe.conf
+++ b/dhcpd-lbr0-pxe.conf
@@ -15,7 +15,7 @@ dhcp-no-override
 #
 dhcp-match=set:efi-ia32,option:client-arch,6
 dhcp-match=set:efi-x86_64,option:client-arch,7
-#dhcp-match=set:efi-x86_64,option:client-arch,9
+dhcp-match=set:efi-x86_64,option:client-arch,9
 
 # Syntax:
 # dhcp-option=[tag:<tag>,[tag:<tag>,]][encap:<opt>,][vi-encap:<enterprise>,][vendor:[<vendor-class>],][<opt>|option:<opt-name>|option6:<opt>|option6:<opt-name>],[<value>[,<value>]]
