Use option name instead of number.

--- a/dhcpd-lbr0-pxe.conf
+++ b/dhcpd-lbr0-pxe.conf
@@ -20,7 +20,7 @@ dhcp-match=set:efi-x86_64,option:client-arch,9
 # Syntax:
 # dhcp-option=[tag:<tag>,[tag:<tag>,]][encap:<opt>,][vi-encap:<enterprise>,][vendor:[<vendor-class>],][<opt>|option:<opt-name>|option6:<opt>|option6:<opt-name>],[<value>[,<value>]]
 #
-#dhcp-option=tag:lbr00,vendor:PXEClient,1,192.168.0.123
+#dhcp-option=tag:lbr00,vendor:PXEClient,option:netmask,192.168.0.123
 
 # Syntax:
 # dhcp-boot=[tag:<tag>,]<filename>,[<servername>[,<server address>|<tftp_servername>]]
